--- a/BHSCMSApp/BHSCMSApp/Web.config
+++ b/BHSCMSApp/BHSCMSApp/Web.config
@@ -11,6 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BHSCMSApp-20140906012915.mdf;Initial Catalog=aspnet-BHSCMSApp-20140906012915;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="BHSCMS" connectionString="Data Source=Martinez-PC;Initial Catalog=BHSCMS;Integrated Security=True" providerName="System.Data.SqlClient" />
+   <!--<add name="BHSCMS" connectionString="Server=COB-IT-BLOBFISH;Database=BHSCMS;Trusted_Connection=Yes;"/>-->
+  <!--<add name="BHSCMS" connectionString="Data Source=COB-IT-BLOBFISH.ad.louisville.edu;Initial Catalog=BHSCMS;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient"/>-->
+  
+ 
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
