--- a/BHSCMSApp/BHSCMSApp/Web.config
+++ b/BHSCMSApp/BHSCMSApp/Web.config
@@ -4,19 +4,28 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BHSCMSApp-20140906012915.mdf;Initial Catalog=aspnet-BHSCMSApp-20140906012915;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="BHSCMS" connectionString="Data Source=Martinez-PC;Initial Catalog=BHSCMS;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="BHSCMS" connectionString="Data Source=Martinez-PC;Initial Catalog=BHSCMS;Integrated Security=True" providerName="System.Data.SqlClient" />-->
    <!--<add name="BHSCMS" connectionString="Server=COB-IT-BLOBFISH;Database=BHSCMS;Trusted_Connection=Yes;"/>-->
   <!--<add name="BHSCMS" connectionString="Data Source=COB-IT-BLOBFISH.ad.louisville.edu;Initial Catalog=BHSCMS;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient"/>-->
-  
+  <add name="BHSCMS" connectionString="Data Source=COB-IT-BLOBFISH.ad.louisville.edu;Initial Catalog=BHSCMS;Persist Security Info=True; User ID=bragg_Test;password=bl0bte$$t;" providerName="System.Data.SqlClient" />
  
   </connectionStrings>
+  <system.net>
+    <settings>
+        <httpWebRequest useUnsafeHeaderParsing="true" />
+    </settings>
+</system.net>
   <system.web>
+  
+        <customErrors mode="Off" />
+   
     <authentication mode="Forms">
       <forms loginUrl="~/Default.aspx" timeout="2880" />
     </authentication>
@@ -31,7 +40,8 @@
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
-        <add namespace="Microsoft.AspNet.Identity" />        
+        <add namespace="Microsoft.AspNet.Identity" />
+      
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
@@ -86,6 +96,14 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.22.0" newVersion="4.2.22.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
