--- a/BHSCMSApp/BHSCMSApp/packages.config
+++ b/BHSCMSApp/BHSCMSApp/packages.config
@@ -6,10 +6,13 @@
   <package id="AspNet.ScriptManager.jQuery" version="1.10.2" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Google.Apis" version="1.9.0" targetFramework="net45" />
+  <package id="Google.Apis.Core" version="1.9.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
   <package id="json2" version="1.0.2" targetFramework="net45" />
   <package id="JuiceUI" version="1.1.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
@@ -20,6 +23,10 @@
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.1" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
@@ -31,8 +38,9 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
 </packages>
