--- a/BHSCMSApp/BHSCMSApp/BHSCMSApp.csproj
+++ b/BHSCMSApp/BHSCMSApp/BHSCMSApp.csproj
@@ -308,8 +308,12 @@
     <Content Include="Dashboard\ManageRFI\SQL\ViewRFIClosed.sql" />
     <Content Include="Dashboard\ManageRFI\SQL\ViewRFIOpened.sql" />
     <Content Include="Dashboard\ManageRFI\ViewRFIList.aspx" />
-    <Content Include="Dashboard\ManageRFI\ManageRFP\NewRFP.aspx" />
-    <Content Include="Dashboard\ManageRFI\ManageRFP\ViewRFP.aspx" />
+    <Content Include="Dashboard\ManageRFP\NewRFP.aspx" />
+    <Content Include="Dashboard\ManageRFP\SQL\RFP_RFIVendors.sql" />
+    <Content Include="Dashboard\ManageRFP\SQL\ViewRFP.sql" />
+    <Content Include="Dashboard\ManageRFP\SQL\ViewRFPClosed.sql" />
+    <Content Include="Dashboard\ManageRFP\SQL\ViewRFPOpened.sql" />
+    <Content Include="Dashboard\ManageRFP\ViewRFP.aspx" />
     <Content Include="Dashboard\Request\VendorRequest.aspx" />
     <Content Include="Dashboard\SQL\RFIclosingdate.sql" />
     <Content Include="Dashboard\Tools\Reports.aspx" />
