Registration Code Added & Vendor Registraion Form Created
Need to implement file upload and email notifications.
Registration Page need to check that RegCode is a requirement.

--- a/BHSCMSApp/BHSCMSApp/Web.config
+++ b/BHSCMSApp/BHSCMSApp/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BHSCMSApp-20140906012915.mdf;Initial Catalog=aspnet-BHSCMSApp-20140906012915;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BHSCMSApp-20140906012915.mdf;Initial Catalog=aspnet-BHSCMSApp-20140906012915;Integrated Security=True" providerName="System.Data.SqlClient" />-->
 
     
     <!--Global Connection String-->
