--- a/BHSCMSApp/BHSCMSApp/Web.config
+++ b/BHSCMSApp/BHSCMSApp/Web.config
@@ -113,6 +113,7 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+     <!--annia-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
