--- a/BHSCMSApp/BHSCMSApp/BHSCMSApp.csproj
+++ b/BHSCMSApp/BHSCMSApp/BHSCMSApp.csproj
@@ -319,9 +319,7 @@
     <Content Include="Dashboard\ManageRFP\SQL\ViewRFPOpened.sql" />
     <Content Include="Dashboard\ManageRFP\ViewRFP.aspx" />
     <Content Include="Dashboard\Request\VendorRequest.aspx" />
-    <Content Include="Dashboard\SQL\ContractExpiringdate.sql" />
     <Content Include="Dashboard\SQL\RFIclosingdate.sql" />
-    <Content Include="Dashboard\SQL\RFPclosingdate.sql" />
     <Content Include="Dashboard\Tools\Reports.aspx" />
     <Content Include="Dashboard\Tools\SQL\CalculateSavings.sql" />
     <Content Include="Dashboard\Tools\SQL\ComparePrices.sql" />
@@ -334,15 +332,13 @@
     <Content Include="Dashboard\VendorRFP\VendorRFPList.aspx" />
     <Content Include="img\baptisthealthrichmond.jpg" />
     <Content Include="img\BHLOUTM-P.png" />
-    <Content Include="img\employees.png" />
-    <Content Include="img\notifications.png" />
-    <Content Include="img\rfis.png" />
-    <Content Include="img\vendors.png" />
+    <Content Include="img\purple-Notifications2.png" />
     <Content Include="img\purple.png" />
     <Content Include="img\business.jpg" />
     <Content Include="img\calendar.gif" />
     <Content Include="img\contract.jpg" />
     <Content Include="img\cream_pixels.png" />
+    <Content Include="img\dashboard.png" />
     <Content Include="Dashboard\DashboardAdmin.aspx" />
     <Content Include="Dashboard\Account\ManageEmployees.aspx" />
     <Content Include="Dashboard\Account\ManageVendors.aspx" />
@@ -358,6 +354,7 @@
     <Content Include="Dashboard\Account\SQL\UserVendorDetails.sql" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="img\BHLOUTM.jpg" />
+    <Content Include="img\fb.ico" />
     <Content Include="img\footer.png" />
     <Content Include="img\footer2.png" />
     <Content Include="img\green.jpg" />
@@ -366,6 +363,7 @@
     <Content Include="img\green3.jpg" />
     <Content Include="img\logo.png" />
     <Content Include="img\p6_%402X.png" />
+    <Content Include="img\tw.png" />
     <Content Include="img\upcoming.png" />
     <Content Include="logo.png" />
     <Content Include="packages.config" />
